# monorepo

./: .envrc  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README.org  blog.css  blog.el  ci-builds.nix  const.go  default.nix  image.go  main.go  notes.org  postamble.html  preamble.html  presentation.md  presentation.tex  read-tree.nix  result.pdfpc  slides.pdfpc  slides.tex  types.go
demo/: demo-error@.service  demo-limits.slice  demo-notify@.service  demo-timer.service  demo-timer.timer
docs/: CONTRIBUTING.md
fun/amsterdump/: default.nix  listings-20200105.json  main.go  scrape.el
fun/aoc2019/: default.nix
fun/best-tools/: README.md
fun/elblog/: README.md  preamble.html
fun/gemma/: default.nix
fun/idual/: README.md  __init__.py  codes.txt  default.nix  idual.py  idualctl  setup.py
fun/logo/: depot-logo.xcf
fun/quinistry/: README.md  default.nix  image.go  main.go
fun/tvl/: default.nix  stream.sh  tvl.dot
fun/watchblob/: default.nix
fun/wcl/: default.nix  wc.lisp
include/: stomp.hrl
infra/kubernetes/: primary-cluster.yaml
k8s/: parent.yaml
lisp/dns/: README.md  client.lisp  default.nix  message.lisp  package.lisp  resolver.lisp
net/crimp/: Cargo.toml  README.md
net/crimp/src/: lib.rs  tests.rs
net/stomp_erl/: Makefile  erlang.mk
nix/buildLisp/: README.md  default.nix
ops/: kms_pass.nix
overrides/: default.nix
secrets/: gcsr-tazjin-password
src/: hello2.erl  lib.rs  main.rs  stomp.app.src  stomp.erl_app.erl  stomp.erl_sup.erl  stomp_app.erl  stomp_sup.erl  stomp_worker.erl  tests.rs
(+129 files in other folders)
