[package]
name = "crimp"
description = "Higher-level Rust API for cURL bindings"
version = "0.2.2"
authors = ["Vincent Ambo <mail@tazj.in>"]
keywords = [ "http", "curl" ]
categories = [ "api-bindings" ]
license = "GPL-3.0-or-later"
repository = "https://github.com/tazjin/crimp"

[features]
default = [ "json" ]
json = [ "serde", "serde_json"]

[dependencies]
curl = "0.4"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
